3d bug fix, add more effect, and others
1. fix 3d effect for off-screen-nav
2. added minimise then flip
3. moving the staggering li amount to variable
4. added missing semi-colon;

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -28,7 +28,7 @@ $effeckt-page-transition-duration: $effeckt-transition-duration * 2 !default;
 
 // Off Screen Nav
 $effeckt-off-screen-navigation-transition-duration: $effeckt-transition-duration !default;
-
+$effeckt-off-screen-navigation-list-item-amount: 15;
 
 
 // List Items
